feat: add basic structure for a clothing store

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Tienda Soria - Ropa de Mujer</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Tienda Soria</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Catálogo</a></li>
+                <li><a href="#">Carrito</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="catalog">
+        <article class="product">
+            <img src="ropa1.jpg" alt="Vestido Rojo">
+            <h2>Vestido Rojo</h2>
+            <p class="price">$50.00</p>
+            <select>
+                <option value="S">S</option>
+                <option value="M">M</option>
+                <option value="L">L</option>
+                <option value="XL">XL</option>
+            </select>
+            <button class="add-to-cart">Añadir al Carrito</button>
+        </article>
+
+        <!-- Agrega más productos similares aquí -->
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Tienda Soria</p>
+    </footer>
 </body>
 </html>
